--- a/index.html
+++ b/index.html
@@ -24,90 +24,90 @@
         <a href="tel:+11000-111-11-11">+11 (000) 111-11-11</a>
       </address>
     </header>
-
-    <div>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
-    </div>
-
-    <section>
-      <ul>
-        <li>
-          <div>Strategy</div>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <div>Punctuality</div>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <div>Diligence</div>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <div>Technologies</div>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>What are we doing</h2>
+    <main>
       <div>
-        <img src="images/pic-1.jpg" alt="we make desktop" width="360" />
-        <img
-          src="images/pic-2.jpg"
-          alt="we make a mobile version"
-          width="360"
-        />
-        <img
-          src="images/pic-3.jpg"
-          alt="we make a mobile version an app"
-          width="360"
-        />
+        <section>
+          <h1>Effective Solutions for Your Business</h1>
+          <button type="button">Order Service</button>
+        </section>
       </div>
-    </section>
 
-    <section>
-      <h2>Our team</h2>
-      <ul>
-        <li>
-          <img src="images/card-1.jpg" alt="Product Designer photo" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="images/card-2.jpg" alt="Frontend Developer photo" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="images/card-3.jpg" alt="Marketer photo" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="images/card-4.jpg" alt="UI Designer photo" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
+      <section>
+        <ul>
+          <li>
+            <div>Strategy</div>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <div>Punctuality</div>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <div>Diligence</div>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <div>Technologies</div>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
+      <section>
+        <h2>What are we doing</h2>
+        <div>
+          <img src="images/pic-1.jpg" alt="we make desktop" width="360" />
+          <img
+            src="images/pic-2.jpg"
+            alt="we make a mobile version"
+            width="360"
+          />
+          <img
+            src="images/pic-3.jpg"
+            alt="we make a mobile version an app"
+            width="360"
+          />
+        </div>
+      </section>
+
+      <section>
+        <h2>Our team</h2>
+        <ul>
+          <li>
+            <img src="images/card-1.jpg" alt="Product Designer photo" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/card-2.jpg" alt="Frontend Developer photo" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="images/card-3.jpg" alt="Marketer photo" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/card-4.jpg" alt="UI Designer photo" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="#">webstudio</a>
       <p>
