--- a/index.html
+++ b/index.html
@@ -64,19 +64,22 @@
 
       <section>
         <h2>What are we doing</h2>
-        <div>
-          <img src="images/pic-1.jpg" alt="we make desktop" width="360" />
-          <img
-            src="images/pic-2.jpg"
-            alt="we make a mobile version"
+        <ul>
+          <li>
+            <img src="images/pic-1.jpg" alt="we make desktop" width="360" />
+          </li>
+          <li>
+            <img
+              src="images/pic-2.jpg"
+              alt="we make a mobile version"
+              width="360"
+            />
+          </li>
+          <li>
+            <img src="images/pic-3.jpg" alt="we make a mobile version an app"
             width="360"
-          />
-          <img
-            src="images/pic-3.jpg"
-            alt="we make a mobile version an app"
-            width="360"
-          />
-        </div>
+          </li>
+        </ul>
       </section>
 
       <section>
