--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <a href="#">webstudio</a>
       <nav>
+        <a href=”./index.html”>WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -19,8 +19,10 @@
       </nav>
 
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11000-111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a  href=”mailto:info@devstudio.com”>info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -75,10 +77,10 @@
               width="360"
             />
           </li>
-          <li>
+          <li1>
             <img src="images/pic-3.jpg" alt="we make a mobile version an app"
             width="360"
-          </li>
+          </li1>
         </ul>
       </section>
 
