--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <a href=”./index.html”>WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -20,7 +20,7 @@
 
       <address>
         <ul>
-          <li><a  href=”mailto:info@devstudio.com”>info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -32,16 +32,17 @@
       </section>
 
       <section>
+        <h2>Section 2</h2>
         <ul>
           <li>
-            <div>Strategy</div>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <div>Punctuality</div>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -55,7 +56,7 @@
             </p>
           </li>
           <li>
-            <div>Technologies</div>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -68,42 +69,54 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="images/pic-1.jpg" alt="we make desktop" width="360" />
+            <img src="./images/pic-1.jpg" alt="we make desktop" width="360" />
           </li>
           <li>
             <img
-              src="images/pic-2.jpg"
+              src="./images/pic-2.jpg"
               alt="we make a mobile version"
               width="360"
             />
           </li>
           <li1>
-            <img src="images/pic-3.jpg" alt="we make a mobile version an app"
+            <img src="./images/pic-3.jpg" alt="we make a mobile version an app"
             width="360"
           </li1>
         </ul>
       </section>
 
       <section>
-        <h2>Our team</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/card-1.jpg" alt="Product Designer photo" />
+            <img
+              src="./images/card-1.jpg"
+              alt="Product Designer photo"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/card-2.jpg" alt="Frontend Developer photo" />
+            <img
+              src="./images/card-2.jpg"
+              alt="Frontend Developer photo"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/card-3.jpg" alt="Marketer photo" />
+            <img src="./images/card-3.jpg" alt="Marketer photo" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/card-4.jpg" alt="UI Designer photo" />
+            <img
+              src="./images/card-4.jpg"
+              alt="UI Designer photo"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -111,7 +124,7 @@
       </section>
     </main>
     <footer>
-      <a href="#">webstudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
