--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
               width="360"
             />
           </li>
-          <li1>
-            <img src="./images/pic-3.jpg" alt="we make a mobile version an app"
-            width="360"
-          </li1>
+          <li>
+            <img
+              src="./images/pic-3.jpg"
+              alt="we make a mobile version an app"
+              width="360"
+            />
+          </li>
         </ul>
       </section>
 
