--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </p>
           </li>
           <li>
-            <div>Diligence</div>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -69,21 +69,15 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/pic-1.jpg" alt="we make desktop" width="360" />
+            <img src="./images/pic-1.jpg" alt="desktop site" width="360" />
           </li>
+
           <li>
-            <img
-              src="./images/pic-2.jpg"
-              alt="we make a mobile version"
-              width="360"
-            />
+            <img src="./images/pic-2.jpg" alt="mobile site" width="360" />
           </li>
+
           <li>
-            <img
-              src="./images/pic-3.jpg"
-              alt="we make a mobile version an app"
-              width="360"
-            />
+            <img src="./images/pic-3.jpg" alt="mobile app" width="360" />
           </li>
         </ul>
       </section>
